<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/lbl_device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_device_address" />
    <TextView
        android:text="@string/device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_device_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/device_address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_connected_status"
        android:id="@+id/lbl_connected_status"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/device_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connected_status"
        android:id="@+id/connected_status"
        android:layout_below="@+id/lbl_connected_status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_speed"
        android:id="@+id/lbl_speed"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/connected_status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:id="@+id/speed"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lbl_speed"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_throttle_position"
        android:id="@+id/lbl_throttle_position"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/speed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throttle_position"
        android:id="@+id/throttle_position"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lbl_throttle_position"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_dtc"
        android:id="@+id/lbl_dtc"
        android:layout_marginRight="97dp"
        android:layout_above="@+id/device_address"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dtc"
        android:id="@+id/dtc"
        android:layout_below="@+id/lbl_dtc"
        android:layout_alignLeft="@+id/lbl_dtc"
        android:layout_alignStart="@+id/lbl_dtc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_vin"
        android:id="@+id/lbl_vin"
        android:layout_alignBottom="@+id/lbl_throttle_position"
        android:layout_alignLeft="@+id/dtc"
        android:layout_alignStart="@+id/dtc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vin"
        android:id="@+id/vin"
        android:layout_alignStart="@+id/lbl_dtc"
        android:layout_below="@+id/lbl_vin"
        android:layout_alignLeft="@+id/dtc" />

</RelativeLayout>
